# hwdrf

./: .env  .gitignore  README.md  payment.json  pyproject.toml  requirements.txt  users.json
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_initial.py
materials/services/: create_pay.py
myenv/: pyvenv.cfg
users/: admin.py  models.py  serializers.py  tasks.py  urls.py
users/management_commands /: create_users.py
users/migrations/: 0001_initial.py  0002_user_username_alter_user_email.py
